--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
   },
   "homepage": "https://github.com/nekobato/davneko-Desktop#readme",
   "dependencies": {
-    "electron-packager": "^6.0.0",
-    "electron-prebuilt": "^0.37.3"
+    "electron-packager": "^7.0.2",
+    "electron-prebuilt": "^1.1.1"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-dev": "^0.3.0"
+    "gulp-util": "^3.0.7"
   }
 }
